functions and services

--- a/src/app/reactive-forms/reactive-forms.component.html
+++ b/src/app/reactive-forms/reactive-forms.component.html
@@ -24,5 +24,7 @@
 
 <button type="submit" (click)= "onSubmit()">signIn</button>
 </form>
+<span>{{TCSdata?.chart.result[0].meta.currency}}</span>
 
-
+<span>{{TCSdata?.chart.result[0].meta.symbol}}</span>
+<span>{{TCSdata?.chart.result[0].meta.exchangeName}}</span>
