--- a/src/app/reactive-forms/reactive-forms.component.html
+++ b/src/app/reactive-forms/reactive-forms.component.html
@@ -1,4 +1,5 @@
 
+
 <form [formGroup]="loginForm" >
 <input type="text" formControlName="userName"/>
 <div *ngIf ="submitted && f?.userName?.touched && f?.userName?.errors" style="color: red;">
@@ -24,6 +25,9 @@
 <span>{{(TCSdataAsync | async)?.chart.result[0].meta.currency}}</span>
 <button type="submit" (click)= "onSubmit()">signIn</button>
 </form>
+<span>subject: {{subjectService.sampleSubject$ | async}}</span><br/>
+<span>Behaviour Subject: {{subjectService.sampleBehaviourSubject$ | async}}</span><br/>
+
 <span>withAsync: {{ subjectService.sampleSubject$ | async }}</span><br/>
 <span>withTake: {{subjectValue}}</span><br/>
 <span>wtihTakeWhile: {{subjecttakeWhileValue}}</span><br/>
