--- a/src/app/first-page-manual/first-page-manual.component.html
+++ b/src/app/first-page-manual/first-page-manual.component.html
@@ -1,4 +1,4 @@
-<h3>{{title}}</h3>
+<h3 [appBackgroundHighlight]="'grey'">{{title}}</h3>
 <mat-form-field>
     <mat-label>Your Brand</mat-label>
     <input matInput id="brand" class="input-box" [(ngModel)]="brand">
