--- a/src/app/shared/left-nav-panel/left-nav-panel.component.html
+++ b/src/app/shared/left-nav-panel/left-nav-panel.component.html
@@ -2,6 +2,7 @@
     <mat-toolbar color="primary" class="example-toolbar">
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <h1 class="example-app-name">Responsive App</h1>
+      <button type="submit" (click)=isLoggedIn() style="margin: 0 0 0 146px;"> {{login}}</button>
     </mat-toolbar>
   
     <mat-sidenav-container class="example-sidenav-container"
