--- a/src/app/first-page-manual/first-page-manual.component.html
+++ b/src/app/first-page-manual/first-page-manual.component.html
@@ -7,12 +7,12 @@
 
 <mat-form-field>
     <mat-label>Your Model</mat-label>
-    <input matInput id="Model" class="input-box"  [ngModel]="model">
+    <input matInput id="Model" class="input-box"  [(ngModel)]="model">
 </mat-form-field>
 <br/>
 
 <label>fuel type</label>
-<mat-radio-group  class="input-radio" [ngModel]="fuelType">
+<mat-radio-group  class="input-radio" [(ngModel)]="fuelType">
   <mat-radio-button  value="petrol">petrol</mat-radio-button>
   <mat-radio-button  value="diesel">diesel</mat-radio-button>
   <mat-radio-button  value="electric">electric</mat-radio-button>
